--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </p>
           </div>
         </div>
-        <div class="container testimonial-container pt-20">
+        <div class="container testimonial-container pt-20 m-pl-20 m-pr-20">
           <div class="testimonial-card width_30">
             <div class="width_20">
               <img src="./media/img/Avatar _1.png" alt="Avatar" />
@@ -719,7 +719,7 @@
             </div>
           </div>
         </div>
-        <div class="container testimonial-container pt-20">
+        <div class="container testimonial-container pt-20 m-pl-20 m-pr-20">
           <div class="testimonial-card width_30">
             <div class="width_20">
               <img src="./media/img/Avatar _1.png" alt="Avatar" />
@@ -1534,161 +1534,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="container testimonial-container pt-50 pb-100">
-          <div class="testimonial-card width_30">
-            <div class="width_20">
-              <img src="./media/img/Avatar _1.png" alt="Avatar" />
-            </div>
-            <div class="font-color_white width_70">
-              <p class="font-size_22px font-weight_700 mb-10">Wade Warren</p>
-              <p class="font-size_14px">@Wade Warren .2 days ago</p>
-              <p class="font-size_16px">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-                deleniti maiores, unde ex necessitatibus nobis magni accusamus
-                distinctio laboriosam temporibus.
-              </p>
-              <ul>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange_Half.png"
-                    alt="Star Icon"
-                  />
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="testimonial-card width_30">
-            <div class="width_20">
-              <img src="./media/img/Avatar _1.png" alt="Avatar" />
-            </div>
-            <div class="font-color_white width_70">
-              <p class="font-size_22px font-weight_700 mb-10">Wade Warren</p>
-              <p class="font-size_14px">@Wade Warren .2 days ago</p>
-              <p class="font-size_16px">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-                deleniti maiores, unde ex necessitatibus nobis magni accusamus
-                distinctio laboriosam temporibus.
-              </p>
-              <ul>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange_Half.png"
-                    alt="Star Icon"
-                  />
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="testimonial-card width_30">
-            <div class="width_20">
-              <img src="./media/img/Avatar _1.png" alt="Avatar" />
-            </div>
-            <div class="font-color_white width_70">
-              <p class="font-size_22px font-weight_700 mb-10">Wade Warren</p>
-              <p class="font-size_14px">@Wade Warren .2 days ago</p>
-              <p class="font-size_16px">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-                deleniti maiores, unde ex necessitatibus nobis magni accusamus
-                distinctio laboriosam temporibus.
-              </p>
-              <ul>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange.png"
-                    alt="Star Icon"
-                  />
-                </li>
-                <li class="display-inline">
-                  <img
-                    class="icons-s"
-                    src="./media/icons/Star_Icon_Orange_Half.png"
-                    alt="Star Icon"
-                  />
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div> -->
       </section>
       <section
         class="bg-color_primary parents pb-100 pt-100 font-color_white m-pl-20 m-pr-20"
