--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section
         class="cover bg-color_primary font-color_white text-align_center"
       >
-        <div class="container pt-100">
+        <div class="container pt-100 m-pt-30">
           <h2
             class="font-size_54px font-weight_700 pb-50 pt-100 pl-90 pr-90 m-font-size_44px m-pl-20 m-pr-20 m-pt-10"
           >
