--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./dist/style.css" />
     <title>Grizzly Elite</title>
     <link rel="icon" type="image/x-icon" href="./media/icons/favicon.png" />
   </head>
@@ -76,8 +76,8 @@
           <div class="width_50 m-width_100">
             <img
               class="m-width_100"
-              src="./media/img/05-Joaquin-Revllo-22_0039-Full 1.png"
-              alt="Joaquin"
+              src="./media/img/Joaquin-Revello.webp"
+              alt="Joaquin Revello"
             />
           </div>
           <div class="width_50 m-width_100 text-align_center">
@@ -432,8 +432,8 @@
             />
             <img
               class="pb-20 pl-50 m-width_100 m-pl-10 m-pr-10 m-pb-10"
-              src="./media/img/Client_Image_01.png"
-              alt="Client"
+              src="./media/img/Client_Image_01.webp"
+              alt="Client Image"
             />
             <p class="pl-50">
               Aliquam quis tincidunt lectus, vitae aliquam metus. Donec congue
@@ -454,8 +454,8 @@
             <div class="width_50 m-display_none">
               <img
                 class="width_100"
-                src="./media/img/BG_Image.png"
-                alt="BG Image"
+                src="./media/img/BG_Image.webp"
+                alt="Background Image"
               />
             </div>
             <div class="font-color_white width_50 m-width_100">
@@ -665,8 +665,8 @@
             <div class="width_50 m-width_100">
               <img
                 class="m-width_100"
-                src="./media/img/Joaquin_Image_02.png"
-                alt="Joaquin Image"
+                src="./media/img/Joaquin_Revello_02.webp"
+                alt="Joaquin Revello"
               />
             </div>
           </div>
@@ -1076,7 +1076,7 @@
                 </div>
               </div>
               <div class="m-text-align_center">
-                <button class="button_primary pt-50">PAY NOW</button>
+                <button class="button_primary">PAY NOW</button>
               </div>
             </form>
           </div>
@@ -1297,7 +1297,7 @@
             <div class="width_50 m-width_100">
               <img
                 class="width_100"
-                src="./media/img/Bibi_Profile.png"
+                src="./media/img/Bibi_Profile.webp"
                 alt="Bibi Profile Picture"
               />
             </div>
@@ -1769,6 +1769,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
